styles/WelcomePage.module.scss
.welcomePage {
  height: 100vh;
  min-height: 50em;
  max-height: 1450px;
  z-index: 1;
}

.purpleConainer {
  background: linear-gradient(180deg, #ffffff 50%, #dfd7ff 100%);
  border-radius: 0% 0% 50% 50%;
  transform: scaleX(2);
  overflow: hidden;
  height: 90%;
  width: 100%;

  display: flex;
  justify-content: center;
  align-items: flex-end;

  @media (max-width: $mobile-breakpoint) {
    display: grid;
  }
}

.container {
  max-width: 1280px;
  height: min-content;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 5em;
  position: relative;
  padding-inline: 2em;
  transform: scaleX(0.5);
  margin-inline: auto;

  @media (max-width: $mobile-breakpoint) {
    margin-top: 2.5em;
    gap: 1em;
  }
}

.hero {
  z-index: 1;
  padding-inline: 5em;

  @media (max-width: $mobile-breakpoint) {
    padding-inline: 1em;
  }

  .textLogo {
    animation: text-appearence 0.5s ease-out 0.5s both;

    font-size: clamp(13px, 1.125vw, 16px);
    margin-inline: auto;
    margin-top: 2em;
    width: 6em;
  }

  .imageLogo {
    animation: text-appearence 0.5s ease-out 0.7s both;

    font-size: clamp(7px, 1.125vw, 16px);
    margin-left: auto;
    margin-right: -4vw;
    width: 4em;

    @media (max-width: $mobile-breakpoint) {
      margin-right: 1em;
    }
  }
}

.integrationsMobile {
  display: none;

  align-items: center;
  flex-direction: column;
  gap: 3em;
  padding-inline: 2em;
  margin-bottom: -5em;

  z-index: 1;

  @media (max-width: $mobile-breakpoint) {
    display: flex;
    gap: 1em;
  }

  .stores {
    display: flex;
    gap: 1em;
  }

  .iphone {
    margin-bottom: 3em;
    animation: iphone-appearence 1s cubic-bezier(0, 0.6, 0.32, 1) 0.1s both;
  }
}

.scrollIconContainer {
  animation: scroll-appearence 1s ease-out 2s both;

  position: absolute;
  bottom: 4%;
  left: 50%;
  z-index: 3;

  @media (max-width: $mobile-breakpoint) {
    display: none;
  }
}

.qrcode {
  display: flex;
  align-items: flex-end;
  justify-content: flex-end;
  gap: 0.5em;

  z-index: 3;
  font-size: 1.2em;

  position: absolute;
  left: 0;
  right: 0;
  bottom: 2em;

  width: 90%;
  max-width: 1280px;
  margin-inline: auto;

  animation: text-appearence 1s ease-out 0.7s both;

  @media (max-width: $mobile-breakpoint) {
    display: none;
  }

  .qrText {
    font-weight: 600;
    margin-right: -0.75em;
    font-size: 1em;
    line-height: 1;
    letter-spacing: -0.02em;
    color: #454267;
  }

  .diagonalArrow {
    margin-bottom: 1.25em;
    margin-right: 0.5em;
    width: 1em;
    aspect-ratio: 1;
  }
}

@keyframes iphone-appearence {
  0% {
    opacity: 0;
    transform: translate(0, 100%);
  }
  100% {
    opacity: 1;
    transform: translate(0, 0);
  }
}

@keyframes text-appearence {
  0% {
    opacity: 0;
    transform: translate(0, 30%);
  }
  100% {
    opacity: 1;
    transform: translate(0, 0);
  }
}

@keyframes store-appearence {
  0% {
    opacity: 0;
    transform: translate(0, 100%);
  }
  100% {
    opacity: 1;
    transform: translate(0, 0);
  }
}

@keyframes scroll-appearence {
  0% {
    opacity: 0;
    transform: translate(-50%, 100%);
  }
  100% {
    opacity: 1;
    transform: translate(-50%, 0);
  }
}

